--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
                     <h4>Contribuir</h4>
                     <ul>
                         <li><a onclick="GFX.togglePopup()">Añadir evento</a></li>
-                        <li><a onclick="GFX.togglePopupVot()">Añadir ideas/votaciones</a></li>
+                        <!-- <li><a onclick="GFX.togglePopupVot()">Añadir ideas/votaciones</a></li> -->
                         
                     </ul>
                 </div>
