--- a/public/index.html
+++ b/public/index.html
@@ -61,17 +61,14 @@
                 <a href=" https://t.me/joinchat/neoZsnH3bas5M2Q0"><img src="img/telegram-brands.png" alt="telegram" ></a>
                 &nbsp;&nbsp;&nbsp;
                 <a href="https://www.instagram.com/lesgirlsoficial/"><img src="img/instagram-brands.png" alt="instagram" ></a>
-                <!-- &nbsp;&nbsp;&nbsp;
-                <a href = "mailto:sofia.martinez.lopez.98@gmail.com"><img src="img/google-plus-g-brands.png" alt="google"></a> -->
+                &nbsp;&nbsp;&nbsp;
+                <a href = "mailto:sofia.martinez.lopez.98@gmail.com"><img src="img/google-plus-g-brands.png" alt="google"></a>
             </div>
         </div>
         <div class="nav-menu">
             <input type="checkbox" id="check">    
             <label for="check" class="checkbtn">
-                <div id="Backlo">
-                    <i class="menu-icon fa fa-bars"></i>
-
-                </div>
+                <i class="menu-icon fa fa-bars"></i>
             </label>
             <ul>
                 <li><a href="">Inicio</a></li>
@@ -152,26 +149,22 @@
             <div class="content-AddEvent">
                 <div class="close-btn" onclick="GFX.togglePopup()">&times</div>
                 <h3>Añadir evento</h3>
-                <label >Nombre Evento*: </label>
+                <label >Nombre Evento: </label>
                 <input type="text" id="nameEvent" name="nameEvent">
                 <br>
-                <label>Fecha del evento (inicio)*:
+                <label>Fecha del evento (inicio):
                     <input type="date" id= "dateEvent" name="dateEvent" required pattern="\d{4}-\d{2}-\d{2}">
                     <span class="validity"></span>
                 </label>
                 <br>
-                <label>Fecha del evento (final)*:
+                <label>Fecha del evento (final):
                     <input type="date" id= "dateEventFinish" name="dateEventFinish" required pattern="\d{4}-\d{2}-\d{2}">
                     <span class="validity"></span>
                 </label>
                 <br>
-                <label>Hora*: <input type="time" id="horaEvent" name="eta"></label>
+                <label>Hora: <input type="time" id="horaEvent" name="eta"></label>
                 <br>
-                <label>Hora final*: <input type="time" id="horaFinalEvent" name="eta2"></label>
-                <br>
-                <label>Ubicación *: </label> <input type="text" id="ubiEvent" name="UbiEvent">
-                <br>
-                <label>Organizador*: </label> <input type="text" id="organizerEvent" name="organizerEvent">
+                <label >Organizador: </label> <input type="text" id="organizerEvent" name="organizerEvent">
                 <br>
                 <label> Descripción: <textarea id="NewEventDescription"></textarea></label>
                 <br>
@@ -201,26 +194,22 @@
             <div class="content-EditEvent">
                 <div class="close-btn" onclick="GFX.toggleEditPopup()">&times</div>
                 <h3>Editar evento</h3>
-                <label >Nombre Evento*: </label>
+                <label >Nombre Evento: </label>
                 <input type="text" id="nameEditEvent" name="nameEditEvent">
                 <br>
-                <label>Fecha del evento (inicio)*:
+                <label>Fecha del evento (inicio):
                     <input type="date" id= "dateEditEvent" name="dateEditEvent" required pattern="\d{4}-\d{2}-\d{2}">
                     <span class="validity"></span>
                 </label>
                 <br>
-                <label>Fecha del evento (final)*:
+                <label>Fecha del evento (final):
                     <input type="date" id= "dateEventEditFinish" name="dateEventEditFinish" required pattern="\d{4}-\d{2}-\d{2}">
                     <span class="validity"></span>
                 </label>
                 <br>
-                <label>Hora*: <input type="time" id="horaEditEvent" name="eta"></label>
+                <label>Hora: <input type="time" id="horaEditEvent" name="horaEditEvent"></label>
                 <br>
-                <label>Hora final*: <input type="time" id="horaFinalEditEvent" name="eta2"></label>
-                <br>
-                <label>Ubicación*: </label> <input type="text" id="ubiEditEvent" name="UbiEvent">
-                <br>
-                <label>Organizador*: </label> <input type="text" id="organizerEditEvent" name="organizerEditEvent">
+                <label >Organizador: </label> <input type="text" id="organizerEditEvent" name="organizerEditEvent">
                 <br>
                 <label> Descripción: <textarea id="NewEventEditDescription"></textarea></label>
                 <br>
@@ -320,7 +309,7 @@
                     <h4>Contribuir</h4>
                     <ul>
                         <li><a onclick="GFX.togglePopup()">Añadir evento</a></li>
-                        <!-- <li><a onclick="GFX.togglePopupVot()">Añadir ideas/votaciones</a></li> -->
+                        <li><a onclick="GFX.togglePopupVot()">Añadir ideas/votaciones</a></li>
                         
                     </ul>
                 </div>
