css cambios Rodrigo

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
                 <li><a href="">Servicios</a></li> -->
                 <li><a href = "mailto:sofia.martinez.lopez.98@gmail.com">Contacto</a></li>
                 <div class="text-center">
-                    <button class="BGoogle" id="signInWithGoogle">Login with your Google
+                    <button class="BGoogle" id="signInWithGoogle">Iniciar sesión 
                     </button>
-                    <button class="BGoogle" id="singout" style="display: none;">Sing out  Google
+                    <button class="BGoogle" id="singout" style="display: none;">Cerrar sesión
                     </button>
                 </div>
             </ul>
@@ -273,19 +273,21 @@
         </div> -->
         <!-- <p class="paraf" class="">Si no hay más de 2 personas apuntadas los planes se cancelan el día de antes. </p>
         <br> -->
+
+        
         <div id="mybutton">
             <button class="feedback" onclick="GFX.UPbotom()">Up</button>
             <button class="feedback" onclick="GFX.downbotom()">Down</button>
         </div>
         <!-- <button id = "Filter" onclick="GFX.seeCalendar()">Desplegar Filtro</button> -->
         <div id="DivCalendar" >
-            <p class="paraf">Calendario de eventos: </p>
+            <!-- <p class="paraf">Calendario: </p> -->
             <div >
                 <div id='calendar'></div>
             </div>
         </div>
         <div id="EventsTrnasf">
-            <h2>Eventos &nbsp;&nbsp;&nbsp; <button id = "ViewAllEvents" onclick="GFX.seeAllEvents()">Ver todos los eventos</button></h2> 
+            <h2>Eventos &nbsp;&nbsp;&nbsp; <button id = "ViewAllEvents" onclick="GFX.seeAllEvents()">Mostrar todos</button></h2> 
             <div id="AddEvents">
                 
             </div>
