--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <a href=""><img src="img/les.webp" alt=""></a>
             <div id="titleLes"><a href="index.html">LesGirls</a></div>
             <div class="socialL">
-                <a href="https://chat.whatsapp.com/LW62XW85Q2yCuiJgjvljkF"><img src="img/whatsapp-brands.png" alt="whatsapp" ></a>
+                <a href="https://linktr.ee/lesgirls"><img src="img/whatsapp-brands.png" alt="whatsapp" ></a>
                 &nbsp;&nbsp;&nbsp;
                 <a href=" https://t.me/joinchat/neoZsnH3bas5M2Q0"><img src="img/telegram-brands.png" alt="telegram" ></a>
                 &nbsp;&nbsp;&nbsp;
